--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
   internet_connection_checker: ^0.0.1+2
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
