--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
+scripts:
+  mobx: flutter pub run build_runner watch --delete-conflicting-outputs
+
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
@@ -27,30 +30,25 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
   internet_connection_checker: ^0.0.1+2
   shared_preferences: ^2.0.8
+  mobx: ^2.0.4
+  provider: ^6.0.1
+  flutter:
+    sdk: flutter
+  flutter_mobx: ^2.0.2
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   build_runner: ^2.1.2
   mockito: ^5.0.16
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
   http_mock_adapter: ^0.3.2
+  mobx_codegen: ^2.0.3
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
