--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     sdk: flutter
   flutter_mobx: ^2.0.2
   cached_network_image: ^3.1.0
+  fpdart: ^0.0.11
 
 dev_dependencies:
   build_runner: ^2.1.2
